test/Fail/Issue1635.err
Issue1635.agda:7.10-14: error: [UnequalTerms]
The terms
  x
and
  foo
are not equal at type Foo
when checking that the expression refl has type x ≡ foo
